# physical-ai-book

./: .gitignore  INTEGRATION_SUMMARY.md  test_api.py
.claude/: settings.local.json
.specify/memory/: claude-agent-context.md
backend/: README.md  agent.py  agent_README.md  api_server.py  main.py  new_agent.py  pyproject.toml  test_agent.py
backend/api/: __init__.py  models.py  retrieval_api.py
backend/cli/: retrieval_cli.py
backend/rag_retrieval/: __init__.py  models.py  retrieval.py  validation.py
my-ai-book/: .gitignore  README.md  docusaurus.config.js  package-lock.json  sidebars.js
my-ai-book/docs/: intro.md
my-ai-book/docs/module-1/: chapter-1.md  (+2 more)
specs/001-ros2-foundations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-robot-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-docusaurus-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tech-context.md
specs/1-openai-agent-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-rag-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+52 files in other folders)
